--- a/index.html
+++ b/index.html
@@ -1,2 +1,8 @@
         1 file(s) copied.
 /*TEST01
+/*FEATUREX
+<html>
+        <head>
+                <title>A Simple Webpage</title>
+        </head>
+</html>
