--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@
 /*FEATUREX
 <html>
         <head>
-                <title>A Simple Webpage</title>
+                <title>A Simple Webpage for FeatureY</title>
         </head>
 </html>
